# TIA-Service-Broadcaster

./: .env.example  .gitignore  API_SECRET_EXPLANATION.md  BOT_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_STAGING.md  DEPLOY_TRIGGER  Dockerfile  ENVIRONMENT_VARIABLES.md  MONITORING_GUIDE.md  PUBLIC_SERVICE_NOTES.md  Procfile  QUICK_START_STAGING.md  RAILWAY_DEPLOY_STEPS.md  RAILWAY_VARIABLES_QUICK_REF.md  README.md  README_RAILWAY.md  SECURITY_AUDIT_REPORT.md  add_help_command.py  pyproject.toml  railway.toml  requirements.txt  run_bot.py  start.py
docs/: API.md
src/broadcaster/: __init__.py  api.py  database.py  logging_config.py  models.py  run.py  settings.py  signal_parser.py  telegram_bot.py
src/signal_bot/: __init__.py  broadcaster.py  crypto.py  database.py  run.py  server.py  settings.py  signal_parser.py  telegram_bot.py  trade_executor.py
